# pyorderly

./: .buildinfo  .gitignore  LICENSE.txt  README.md  code.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: code.doctree  environment.pickle  index.doctree  readme.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/orderly/: index.doctree
.doctrees/autoapi/orderly/core/: index.doctree
.doctrees/autoapi/orderly/current/: index.doctree
.doctrees/autoapi/orderly/read/: index.doctree
.doctrees/autoapi/orderly/run/: index.doctree
.doctrees/autoapi/outpack/: index.doctree
.doctrees/autoapi/outpack/__about__/: index.doctree
.doctrees/autoapi/outpack/config/: index.doctree
.doctrees/autoapi/outpack/copy_files/: index.doctree
.doctrees/autoapi/outpack/filestore/: index.doctree
.doctrees/autoapi/outpack/hash/: index.doctree
.doctrees/autoapi/outpack/helpers/: index.doctree
.doctrees/autoapi/outpack/ids/: index.doctree
.doctrees/autoapi/outpack/index/: index.doctree
.doctrees/autoapi/outpack/init/: index.doctree
.doctrees/autoapi/outpack/location/: index.doctree
.doctrees/autoapi/outpack/location_driver/: index.doctree
.doctrees/autoapi/outpack/location_path/: index.doctree
.doctrees/autoapi/outpack/location_pull/: index.doctree
.doctrees/autoapi/outpack/location_ssh/: index.doctree
.doctrees/autoapi/outpack/metadata/: index.doctree
.doctrees/autoapi/outpack/packet/: index.doctree
.doctrees/autoapi/outpack/root/: index.doctree
.doctrees/autoapi/outpack/sandbox/: index.doctree
.doctrees/autoapi/outpack/schema/: index.doctree
.doctrees/autoapi/outpack/search/: index.doctree
.doctrees/autoapi/pyorderly/: index.doctree
.github/workflows/: docs.yml  release.yml  test.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/orderly/: index.rst.txt
_sources/autoapi/outpack/: index.rst.txt
_sources/autoapi/pyorderly/: index.rst.txt
autoapi/: index.html
autoapi/orderly/: index.html
autoapi/orderly/core/: index.html
autoapi/orderly/current/: index.html
autoapi/orderly/read/: index.html
autoapi/orderly/run/: index.html
autoapi/outpack/: index.html
autoapi/outpack/__about__/: index.html
autoapi/outpack/config/: index.html
autoapi/outpack/copy_files/: index.html
autoapi/outpack/filestore/: index.html
autoapi/outpack/hash/: index.html
autoapi/outpack/helpers/: index.html
autoapi/outpack/ids/: index.html
autoapi/outpack/index/: index.html
autoapi/outpack/init/: index.html
autoapi/outpack/location/: index.html
autoapi/outpack/location_driver/: index.html
autoapi/outpack/location_path/: index.html
autoapi/outpack/location_pull/: index.html
autoapi/outpack/location_ssh/: index.html
autoapi/outpack/metadata/: index.html
autoapi/outpack/packet/: index.html
autoapi/outpack/root/: index.html
autoapi/outpack/sandbox/: index.html
autoapi/outpack/schema/: index.html
autoapi/outpack/search/: index.html
autoapi/outpack/search_options/: index.html
autoapi/outpack/static/: index.html
autoapi/outpack/tools/: index.html
autoapi/outpack/util/: index.html
autoapi/pyorderly/: index.html
autoapi/pyorderly/__about__/: index.html
autoapi/pyorderly/core/: index.html
autoapi/pyorderly/current/: index.html
autoapi/pyorderly/outpack/: index.html
autoapi/pyorderly/read/: index.html
autoapi/pyorderly/run/: index.html
docs/: code.md  conf.py  index.md
docs/_build/: .buildinfo  code.html  readme.html
docs/_build/.doctrees/: environment.pickle  readme.doctree
docs/_build/autoapi/: index.html
example/.outpack/: config.json
example/.outpack/index/: outpack.rds
example/.outpack/metadata/: 20230807-152344-ee606dce  20230807-152345-0e0662d0  20230807-152345-144cf26c  20230807-152345-1ad02157  20230814-163026-ac5900c0
example/src/depends/: depends.py
scripts/: generate_docs  generate_examples  update_schemas
src/orderly/: __init__.py  __main__.py  core.py  current.py  metadata.py  read.py  run.py
src/orderly/cli/: __init__.py  options.py
src/outpack/: __about__.py  config.py  copy_files.py  digest.py  filestore.py  hash.py  helpers.py  ids.py  index.py  init.py  insert.py  location.py  location_driver.py  location_path.py  location_pull.py  location_ssh.py  metadata.py  packet.py  root.py  run.py  sandbox.py  search.py  search_options.py  search_query.py  static.py  test_util.py  tools.py  util.py
src/outpack/schema/: __init__.py
src/pyorderly/: __about__.py  __init__.py  __main__.py  core.py  current.py  read.py  run.py
src/pyorderly/cli/: __init__.py  options.py
src/pyorderly/outpack/: archive.py  config.py  copy_files.py  filestore.py  hash.py  ids.py  index.py  init.py  location.py  location_driver.py  location_http.py  location_packit.py  location_path.py  location_pull.py  location_push.py  location_ssh.py  metadata.py  oauth.py  packet.py  root.py  sandbox.py  search.py  search_options.py  static.py  tools.py  util.py
tests/: conftest.py  test_config.py  test_copy_files.py  test_digest.py  test_filestore.py  test_hash.py  test_helpers.py  test_ids.py  test_index.py  test_init.py  test_location.py  test_location_path.py  test_location_pull.py  test_location_ssh.py  test_metadata.py  test_packet.py  test_root.py  test_run.py  test_sandbox.py  test_schema.py  test_search.py  test_search_options.py  test_search_query.py  test_tools.py  test_util.py
tests/examples/data/: orderly.py
tests/helpers/: __init__.py  keyring.py  outpack_server.py  ssh_server.py
tests/orderly/: test_cli.py  test_current.py  test_read.py  test_run.py  test_run_metadata.py
tests/outpack/: __init__.py  test_config.py  test_copy_files.py  test_filestore.py  test_hash.py  test_ids.py  test_index.py  test_init.py  test_location.py  test_location_http.py  test_location_packit.py  test_location_path.py  test_location_pull.py  test_location_ssh.py  test_metadata.py  test_oauth.py  test_packet.py  test_root.py  test_sandbox.py  test_schema.py  test_search.py  test_search_options.py  test_tools.py  test_util.py
(+195 files in other folders)
