[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outpack"
dynamic = ["version"]
description = "Reproducible and collaborative reporting"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Rich FitzJohn", email = "r.fitzjohn@imperial.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dataclasses-json",
  "importlib_resources",
  "jsonschema",
  "pygit2"
]

[project.urls]
Documentation = "https://github.com/mrc-ide/outpack#readme"
Issues = "https://github.com/mrc-ide/outpack/issues"
Source = "https://github.com/mrc-ide/outpack"

[tool.hatch.version]
path = "src/outpack/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report --show-missing",
]
cov = [
  "test-cov",
  "cov-report",
]
cov-report-xml = [
  "- coverage combine",
  "coverage xml",
]
cov-ci = [
  "test-cov",
  "cov-report-xml",
]


[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
extra-dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 80
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Don't require docstrings everywhere for now
  "D100", "D101", "D102", "D103", "D104", "D105",
  # Ignore shadowing
  "A001", "A002", "A003",
  # Allow print until we find the alternative to R's cli
  "T201"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["outpack"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source_pkgs = ["outpack", "orderly", "tests"]
branch = true
parallel = true
omit = [
  "src/outpack/__about__.py",
  "tests/helpers/*",
]

[tool.coverage.paths]
outpack = ["src/outpack", "src/orderly", "*/outpack/src/outpack"]
tests = ["tests", "*/outpack/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = ["tests"]

# https://github.com/libgit2/pygit2/issues/709
[[tool.mypy.overrides]]
module = "pygit2"
ignore_missing_imports = true
