[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyorderly"
dynamic = ["version"]
description = "Reproducible and collaborative reporting"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Rich FitzJohn", email = "r.fitzjohn@imperial.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dataclasses-json",
  "importlib_resources",
  "jsonschema",
  "pygit2",
  "outpack-query-parser",
  "humanize",
  "tblib",
  "paramiko",
  "requests",
  "typing-extensions",
]

[project.urls]
Documentation = "https://github.com/mrc-ide/pyorderly#readme"
Issues = "https://github.com/mrc-ide/pyorderly/issues"
Source = "https://github.com/mrc-ide/pyorderly"

[tool.hatch.version]
path = "src/pyorderly/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "myst-parser",
  "pytest",
  "pytest-cov",
  "pytest-unordered",
  "pytest_mock",
  "responses",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "sphinx-rtd-theme",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov --cov-report= --cov-config=pyproject.toml {args:tests}"
cov-report = "coverage report --show-missing"
cov = [
  "test-cov",
  "cov-report",
]
cov-report-xml = "coverage xml"
cov-ci = [
  "test-cov",
  "cov-report-xml",
]
generate-docs = [
  "sphinx-autogen ./docs/*.md",
  "sphinx-build -b html ./docs ./docs/_build"
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.lint]
extra-dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src tests}"
style = [
  "ruff check {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff check --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Don't require docstrings everywhere for now
  "D100", "D101", "D102", "D103", "D104", "D105",
  # Ignore shadowing
  "A001", "A002", "A003",
  # Allow print until we find the alternative to R's cli
  "T201",
  # Allow use of non-cryptographic `random` module.
  "S311"
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source_pkgs = ["pyorderly", "tests"]
branch = true
parallel = true

# The wildcards are needed in order for the omit path to work correctly even
# when spawning subprocess in different directories.
omit = [
  "**/src/pyorderly/__about__.py",
  "**/tests/helpers/*",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod",
  "@overload",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
allow_redefinition = true

# https://github.com/libgit2/pygit2/issues/709
[[tool.mypy.overrides]]
module = "pygit2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "outpack_query_parser"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tblib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# https://github.com/getsentry/responses/issues/751
module = "responses"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# https://github.com/getsentry/responses/issues/751
module = "responses.registries"
ignore_missing_imports = true

