[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pyorderly"
version = "0.2.0"
description = "Reproducible and collaborative reporting"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Rich FitzJohn", email = "r.fitzjohn@imperial.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dataclasses-json",
  "importlib_resources",
  "jsonschema",
  "pygit2",
  "outpack-query-parser",
  "humanize",
  "tblib",
  "paramiko",
  "requests",
  "typing-extensions",
]

[project.urls]
Documentation = "https://github.com/mrc-ide/pyorderly#readme"
Issues = "https://github.com/mrc-ide/pyorderly/issues"
Source = "https://github.com/mrc-ide/pyorderly"

[dependency-groups]
dev = [
   "taskipy",
   "pytest",
   "pytest-cov",
   "pytest-mock",
   "pytest-unordered",
   "responses",
]
lint = [
   "mypy",
   "ruff",
   "types-jsonschema",
   "types-paramiko",
   "types-requests",
]
docs = [
  "sphinx",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "sphinx-rtd-theme",
  "myst-parser",
]

[tool.uv]
default-groups = "all"

[tool.taskipy.tasks]
test = "pytest"
test-cov = "pytest --cov --cov-report= --cov-config=pyproject.toml"
cov-report = "coverage report --show-missing"
cov-report-xml = "coverage xml"
cov = "task test-cov && task cov-report"
cov-ci = "task test-cov && task cov-report-xml"

typing = "mypy src tests"
style = "ruff check && ruff format --diff"
check = "task typing && task style"
fmt = "ruff check --fix && ruff format"

generate-docs = "sphinx-autogen ./docs/*.md && sphinx-build -b html ./docs ./docs/_build"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Don't require docstrings everywhere for now
  "D100", "D101", "D102", "D103", "D104", "D105",
  # Ignore shadowing
  "A001", "A002", "A003",
  # Allow print until we find the alternative to R's cli
  "T201",
  # Allow use of non-cryptographic `random` module.
  "S311",

  # Disable the line length limit. This is already enforced by the formatter,
  # although the formatter treats it as a best effort whereas the linter treats
  # it as a hard limit. In the few cases where the formatter cannot apply the
  # limit the linter would throw an error if we didn't disable this.
  "E501",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source_pkgs = ["pyorderly", "tests"]
branch = true
parallel = true

# Reports run using subprocesses. We need this in order to gather coverage in
# the child processes.
# https://pytest-cov.readthedocs.io/en/latest/subprocess-support.html
patch = ["subprocess"]

# The wildcards are needed in order for the omit path to work correctly even
# when spawning subprocess in different directories.
omit = [
  "**/src/pyorderly/__about__.py",
  "**/tests/helpers/*",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod",
  "@overload",
  "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
allow_redefinition = true

# https://github.com/libgit2/pygit2/issues/709
[[tool.mypy.overrides]]
module = "pygit2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "outpack_query_parser"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tblib"
ignore_missing_imports = true
